# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
include/: print.hpp
src/: print.cpp
